--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
        <div class="user">
-       <img src="photo.jpg">
+       <img src="VINAY123PIC.jpg">
        <h5 class="nm">vinay</h5>
        <p class="jb">Student</p>
        </div>
